jade/assets/stylesheets/style.css
@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
/* general stuff */
html body {
      font-family: 'Raleway', sans-serif;
      font-size: 16px;
}

/* ##########################
    Header - 'advanced'
#########################*/
 header {
        width: 100%;
        height: 150px;
        overflow: hidden;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 999;
        -webkit-transition: height 1.0s;
        -moz-transition: height 1.0s;
        -ms-transition: height 1.0s;
        -o-transition: height 1.0s;
        transition: height 1.0s;
        background-color: #1e90ff;
}

/* title in regular mode */
header  .blogtitle {
         font-size: 48px;
         margin-left: 5%;
         margin-top: 35px;
          text-overflow: ellipsis;
         white-space: nowrap;
          white-space: nowrap;
        overflow: hidden;
         }

header .blogdescription {
    color: white;
    margin-left: 7%;
}

/* new height when in smaller version */
header.smaller {
    height: 75px;
}

/* new blog title size when in small version */
header.smaller  .blogtitle {
        margin-top: 10px;
       text-overflow: ellipsis;
      white-space: nowrap;
       white-space: nowrap;
     overflow: hidden;
}

header.smaller .blogdescription {
    position: absolute;
    left: 150px;
    top: 45px;
    color: white;
    margin-left: 7%;
}



#headerurl{
    color: white;
}

/*
############
Info modal
############
*/
/* question mark - about this theme */
#about {
    position: absolute;
    right: 10px;
    top: 10px;
}

/* question mark color */
#about > a {
    color: #00bfff;
}

#about > a:hover {
    color: black;
}

/* social part in the header */
#socialhead {
    position:absolute;
    top: 10px;
    right: 45px;
}

#socialhead > a {
    color: #00bfff;
}

#socialhead > a:hover {
    color: black;
}

 /*
 ###############
 Post related
 ##############
 */

.text-left-title {
    padding-left: 40px;
    padding-top: 20px;
    font-size: 28px;
}

  /* post headers */
  .posttheme {
      background-color: #1e90ff;
      color: white;
      padding-bottom: 5px;
 }

 .posttheme-button  {
         float: right;
         color: #fff;
         margin-top: -20px;
         padding: 10px;
         background-color: #1e90ff;
 }

 .posttheme-button:hover {
     background-color: #00bfff;
     color: white;
 }

 /* size of date and tags in header */
 .postdate {
     font-size: 16px;
     margin-right: 5px;
 }

 /* url post header */
 .text-left-title a {
         color: white;
 }


 /* Articles */
 article {
     margin-bottom: 35px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }

/* dont expand images too far in excerpt */
article img {
    width: 100%;
}


/* row below posts on index */
hr {
    border-width: 3px;
    color: #708090;
}

/* author info stuff at bottom of post */
.postfooter{
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: center;
}

.authorimage > img {
    width: auto;
}

/* pagination */
#pagination {
    text-align: center;
    bottom: 0;
}

.older-posts, .newer-posts {
      background: #1e90ff;
      color: #fff;
      padding: 10px;
}

.older-posts:hover, .newer-posts:hover {
        color: #fff;
        background-color: #00bfff;
}

.scroll-top{
    color: #fff;
    text-decoration: none;
    text-align: center;
    left: 50%;
    margin-bottom: 20px;
}



/* fix header for mobile devices */
@media only screen and (max-width: 720px) {

     header {
            width: 100%;
            height: 75px;
            overflow: hidden;
            position: fixed;
            top: 0;
            left: 0;
            z-index: 999;
    }
         header  .blogtitle {
        margin-left: 10px;
         margin-top: 35px;
         font-size: 26px;
         text-overflow: ellipsis;
           white-space: nowrap;
          overflow: hidden;
         }

         /* new blog title size when in small version */
         header.smaller  .blogtitle {
             margin-left: 10px;
             margin-top: 35px;
                text-overflow: ellipsis;
               white-space: nowrap;
                white-space: nowrap;
              overflow: hidden;
         }

         p {
             margin-left: 10px;
             margin-right:10px;
         }

         .container-fluid{
             margin:0;
             height: 100%;
             margin-top: 70px;
             margin-bottom:30px;
         }

          .text-left-title {
              padding-left: 40px;
              padding-top: 20px;
              font-size: 18px;
          }

          iframe {
              width: 500px;
              max-width: 100%;
              height: auto;
          }

         blockquote > p {
             overflow:auto;
          }
}

@media only screen and (min-width: 721px) {

    .container-fluid{
        padding-top: 150px;
    }

}

